--- a/prices.html
+++ b/prices.html
@@ -131,8 +131,7 @@
                                 <li class="prices__item">
                                     <div class="prices__picture">
                                         <h3 class="prices__title">«Один»</h3>
-                                        <div class="prices__picture-img">
-                                        </div>
+                                        <img src="img/prices1.jpg" ait="«Один»" class="prices__img">
                                     </div>
                                     <p class="prices__rate">
                                         <strong>800 руб/мес<br> или 100 руб/сутки</strong>
@@ -143,8 +142,7 @@
                                 <li class="prices__item">
                                     <div class="prices__picture">
                                         <h3 class="prices__title">«Трое»</h3>
-                                        <div class="prices__picture-img prices__picture-img--img2">
-                                        </div>
+                                        <img src="img/prices2.jpg" alt="«Трое»" class="prices__img">
                                     </div>
                                     <p class="prices__rate">
                                         <strong>1 500 руб/мес<br> или 200 руб/сутки</strong>
@@ -155,8 +153,7 @@
                                 <li class="prices__item">
                                     <div class="prices__picture">
                                         <h3 class="prices__title">«10-10»</h3>
-                                        <div class="prices__picture-img prices__picture-img--img3">
-                                        </div>
+                                        <img src="img/prices3.jpg" alt="«10-10»" class="prices__img">
                                     </div>
                                     <p class="prices__rate">
                                         <strong>10 000 руб/мес</strong>
@@ -167,8 +164,7 @@
                                 <li class="prices__item">
                                     <div class="prices__picture">
                                         <h3 class="prices__title"><span>Vip</span>«Безлимит на одного»</h3>
-                                        <div class="prices__picture-img prices__picture-img--img4">
-                                        </div>
+                                        <img src="img/prices4.jpg" alt="«Безлимит на одного»" class="prices__img">
                                     </div>
                                     <p class="prices__rate">
                                         <strong>2 500 руб/мес</strong>
@@ -179,8 +175,7 @@
                                 <li class="prices__item">
                                     <div class="prices__picture">
                                         <h3 class="prices__title"><span>Vip</span>«Все включено»</h3>
-                                        <div class="prices__picture-img prices__picture-img--img5">
-                                        </div>
+                                        <img src="img/prices5.jpg" alt="«Все включено»" class="prices__img">
                                     </div>
                                     <p class="prices__rate">
                                         <strong>Цена рассчитывается индивидуально</strong>
@@ -191,8 +186,7 @@
                                 <li class="prices__item">
                                     <div class="prices__picture">
                                         <h3 class="prices__title">«Переговоры»</h3>
-                                        <div class="prices__picture-img prices__picture-img--img6">
-                                        </div>
+                                        <img src="img/prices6.jpg" alt="«Переговоры»" class="prices__img">
                                     </div>
                                     <p class="prices__rate">
                                         <strong>2 500 руб/час —</strong>
